k8s/docs/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: canister
  labels:
    app: com.tale.canister.docs
spec:
  selector:
    app: com.tale.canister.docs
  ports:
    - name: http
      port: 8080
      targetPort: 8080
