k8s/docs/3-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docs
  namespace: canister
spec:
  parentRefs:
    - name: canister-gw
      namespace: envoy-gateway-system
      sectionName: https-canister
  hostnames:
    - docs.canister.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docs
          port: 8080
